syntax = 'proto3';

package message;

import "ref.room.proto";

message JoinRoom {
  string room_id = 1;
  string user_id = 2;
}

message JoinRoomResponse {
  RefRoom room    = 1;
  string  user_id = 2;
  bool    ok      = 3;
  string  error   = 4;
}
