syntax = 'proto3';

package message;

message RoomExists {
  string room_id = 1;
}

message RoomExistsResponse {
  string room_id = 1;
  bool   exists  = 2;
  bool   ok      = 3;
  string error   = 4;
}
