syntax = 'proto3';

package message;

message UserExists {
  string user_id = 1;
}

message UserExistsResponse {
  string user_id = 1;
  bool   exists  = 2;
  bool   ok      = 3;
  string error   = 4;
}
